speaker listing works
