# api-docs/swagger.json
@@ -1608,9 +1608,7 @@
                         "description": "OK",
                         "schema": {
                             "type": "array",
-                            "items": {
-                                "$ref": "#/definitions/adapters.SpeakerInfo"
-                            }
+                            "items": {}
                         }
                     },
                     "500": {
@@ -4052,20 +4050,6 @@
         }
     },
     "definitions": {
-        "adapters.SpeakerInfo": {
-            "type": "object",
-            "properties": {
-                "created_at": {
-                    "type": "number"
-                },
-                "id": {
-                    "type": "string"
-                },
-                "name": {
-                    "type": "string"
-                }
-            }
-        },
         "api.APIKeyListResponse": {
             "type": "object",
             "properties": {
